--- a/Views/Investimentos/Index.cshtml
+++ b/Views/Investimentos/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Financa.Models.Investimento>
+﻿
+@model IEnumerable<Financa.Models.Investimento>
 
 @{
     ViewData["Title"] = "Index";
@@ -23,6 +24,9 @@
 <p>
     <a asp-action="Create">Criar Novo</a>
 
+</p>
+<p>
+    IFIX: @Model.ElementAt(0).Ifix;
 </p>
 <table class="table table-bordered table-striped table-hover table-responsive">
     <thead>
